INTYGFV-12814: Added documentation for new pipelines.